test/sema/s07/fail_while.nsl
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
// test/sema/s07/fail_while.nsl — S7 (lang.ebnf:850) fail variant.
// `while` block at module scope (outside func/proc body) violates
// S7.
//
// Frozen diagnostic per `contracts/diagnostic-string.contract.md`:
//   'while' block may appear only inside a function or procedure body (S7)
//
// **Phase 4a TDD red state**: no S7 checker exists; FAILS until
// Phase 4b T048.

// RUN: not %nslc -emit=ast %s 2>&1 | FileCheck %s

module m_fail {
  wire c;
  while (c) { }
}

// CHECK: error: 'while' block may appear only inside a function or procedure body (S7)
